--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,8 @@
         "unordered_map": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "numeric": "cpp",
+        "random": "cpp"
     }
 }
